[gd_scene load_steps=47 format=3 uid="uid://slj8pp75mudw"]

[ext_resource type="Script" uid="uid://dmqbg5rh4uxmc" path="res://Ruangbelajar.gd" id="1_15u7d"]
[ext_resource type="Texture2D" uid="uid://bvqsqanu7snq" path="res://bg perpus.png" id="1_lioqc"]
[ext_resource type="Script" uid="uid://c2x8unrx0r7j0" path="res://lito.gd" id="2_uei0p"]
[ext_resource type="Texture2D" uid="uid://dcqyqwjvxed2s" path="res://LITO IDLE diam kedip-sheet.png" id="3_15u7d"]
[ext_resource type="Texture2D" uid="uid://dqut8al46l0e3" path="res://LITO IDLE jalan.png" id="4_7e2it"]
[ext_resource type="PackedScene" uid="uid://lwp6ah1wn5vr" path="res://container_atas.tscn" id="6_7e2it"]
[ext_resource type="Texture2D" uid="uid://ci4v2g4knc3f7" path="res://Aset New/button/malinkundang btn.png" id="7_n24q1"]
[ext_resource type="Texture2D" uid="uid://cx4otvssjqcr3" path="res://Aset New/back jumbo.png" id="7_yholn"]
[ext_resource type="Texture2D" uid="uid://c51gyd1jalk7m" path="res://Aset New/button/timun mas btn.png" id="8_u70i3"]
[ext_resource type="Texture2D" uid="uid://dg4u8q4fvlqa" path="res://Aset New/card/card timunmas.png" id="9_uovr1"]
[ext_resource type="Texture2D" uid="uid://bd3vkeshgr58d" path="res://Aset New/card/card malinkundang.png" id="10_yholn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4d7sh"]
atlas = ExtResource("3_15u7d")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ir8iy"]
atlas = ExtResource("3_15u7d")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqns4"]
atlas = ExtResource("3_15u7d")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_x0ka3"]
atlas = ExtResource("3_15u7d")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0h7mo"]
atlas = ExtResource("3_15u7d")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nr8wp"]
atlas = ExtResource("3_15u7d")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2bti"]
atlas = ExtResource("3_15u7d")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ta5nu"]
atlas = ExtResource("3_15u7d")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_flf07"]
atlas = ExtResource("3_15u7d")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_k73cj"]
atlas = ExtResource("3_15u7d")
region = Rect2(432, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjqkl"]
atlas = ExtResource("3_15u7d")
region = Rect2(480, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fs4d3"]
atlas = ExtResource("3_15u7d")
region = Rect2(528, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7vxoj"]
atlas = ExtResource("3_15u7d")
region = Rect2(576, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ei405"]
atlas = ExtResource("3_15u7d")
region = Rect2(624, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8dv2"]
atlas = ExtResource("4_7e2it")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2nhjh"]
atlas = ExtResource("4_7e2it")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjha6"]
atlas = ExtResource("4_7e2it")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gt76g"]
atlas = ExtResource("4_7e2it")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1fr6y"]
atlas = ExtResource("4_7e2it")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hxjc"]
atlas = ExtResource("4_7e2it")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebxd8"]
atlas = ExtResource("4_7e2it")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2u7jv"]
atlas = ExtResource("4_7e2it")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_24dk6"]
atlas = ExtResource("4_7e2it")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mryly"]
atlas = ExtResource("4_7e2it")
region = Rect2(432, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kq1c5"]
atlas = ExtResource("4_7e2it")
region = Rect2(480, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ornx7"]
atlas = ExtResource("4_7e2it")
region = Rect2(528, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cnnru"]
atlas = ExtResource("4_7e2it")
region = Rect2(576, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_540hr"]
atlas = ExtResource("4_7e2it")
region = Rect2(624, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_noopm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4d7sh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ir8iy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqns4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0ka3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0h7mo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nr8wp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2bti")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ta5nu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_flf07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k73cj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjqkl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs4d3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7vxoj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ei405")
}],
"loop": true,
"name": &"idle_kedip",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8dv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2nhjh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjha6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gt76g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1fr6y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hxjc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebxd8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2u7jv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24dk6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mryly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kq1c5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ornx7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cnnru")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_540hr")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n24q1"]
size = Vector2(319, 377)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u70i3"]
size = Vector2(715, 174)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uovr1"]
size = Vector2(715, 174)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yholn"]
size = Vector2(14.5, 404)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i4rfr"]
size = Vector2(10.5, 421)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7e2it"]
size = Vector2(180, 220)

[node name="Ruangbelajar" type="Node2D"]
script = ExtResource("1_15u7d")

[node name="Background_RuanganBaru" type="Sprite2D" parent="."]
position = Vector2(361.49997, 640)
scale = Vector2(3.7552078, 4)
texture = ExtResource("1_lioqc")

[node name="lito" type="CharacterBody2D" parent="." groups=["player"]]
position = Vector2(391, 919)
script = ExtResource("2_uei0p")

[node name="Sprite" type="AnimatedSprite2D" parent="lito"]
scale = Vector2(8, 8)
sprite_frames = SubResource("SpriteFrames_noopm")
animation = &"idle_kedip"

[node name="CollisionShape2D" type="CollisionShape2D" parent="lito"]
position = Vector2(0.5, -2.5)
shape = SubResource("RectangleShape2D_n24q1")

[node name="floor" type="StaticBody2D" parent="."]
position = Vector2(0, 620)

[node name="CollisionShape2D" type="CollisionShape2D" parent="floor"]
position = Vector2(359.5, 575)
shape = SubResource("RectangleShape2D_u70i3")
debug_color = Color(0.7251778, 0.4587313, 0.36349422, 0.41960785)

[node name="Ceiling" type="StaticBody2D" parent="."]
position = Vector2(0, 620)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ceiling"]
position = Vector2(359, -291)
shape = SubResource("RectangleShape2D_uovr1")

[node name="wall" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall"]
position = Vector2(8.75, 895)
shape = SubResource("RectangleShape2D_yholn")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="wall"]
position = Vector2(714.25, 892.5)
shape = SubResource("RectangleShape2D_i4rfr")

[node name="container_atas" parent="." instance=ExtResource("6_7e2it")]
anchors_preset = 10
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 2.0
offset_right = 720.0
offset_bottom = 132.0
grow_vertical = 1

[node name="Exit_Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exit_Area"]
position = Vector2(648, 552)
shape = SubResource("RectangleShape2D_7e2it")
debug_color = Color(0.9458695, 0.03569165, 0.5760471, 0.41960785)

[node name="Sprite2D" type="Sprite2D" parent="Exit_Area"]
position = Vector2(677, 551)
texture = ExtResource("7_yholn")

[node name="Btn_TopengMalin" type="TextureButton" parent="."]
offset_left = 32.0
offset_top = 817.0
offset_right = 173.0
offset_bottom = 1003.0

[node name="PopUp_Pilihan" type="VBoxContainer" parent="."]
visible = false
offset_left = 158.0
offset_top = 390.0
offset_right = 558.0
offset_bottom = 831.0

[node name="Btn_MalinKundang" type="TextureButton" parent="PopUp_Pilihan"]
custom_minimum_size = Vector2(400, 175)
layout_mode = 2
texture_normal = ExtResource("7_n24q1")

[node name="Btn_TimunMas" type="TextureButton" parent="PopUp_Pilihan"]
custom_minimum_size = Vector2(400, 175)
layout_mode = 2
texture_normal = ExtResource("8_u70i3")

[node name="PopUp_Kisah_Card" type="PanelContainer" parent="."]
visible = false
offset_left = 157.0
offset_top = 276.0
offset_right = 560.0
offset_bottom = 1008.0

[node name="Cerita_Label" type="RichTextLabel" parent="PopUp_Kisah_Card"]
layout_mode = 2

[node name="Img_TimunMas_Card" type="TextureButton" parent="PopUp_Kisah_Card"]
layout_mode = 2
texture_normal = ExtResource("9_uovr1")

[node name="Img_MalinKundang_Card" type="TextureButton" parent="PopUp_Kisah_Card"]
layout_mode = 2
texture_normal = ExtResource("10_yholn")

[node name="Btn_KlaimSelesai" type="TextureButton" parent="PopUp_Kisah_Card"]
layout_mode = 2

[connection signal="input_event" from="Exit_Area" to="." method="_on_exit_area_input_event"]
[connection signal="pressed" from="Btn_TopengMalin" to="." method="_on_btn_topeng_malin_pressed"]
[connection signal="pressed" from="PopUp_Pilihan/Btn_MalinKundang" to="." method="_on_btn_malin_kundang_pressed"]
[connection signal="pressed" from="PopUp_Pilihan/Btn_TimunMas" to="." method="_on_btn_timun_mas_pressed"]
[connection signal="pressed" from="PopUp_Kisah_Card/Img_TimunMas_Card" to="." method="_on_img_timun_mas_card_pressed"]
[connection signal="pressed" from="PopUp_Kisah_Card/Img_MalinKundang_Card" to="." method="_on_img_malin_kundang_card_pressed"]
[connection signal="pressed" from="PopUp_Kisah_Card/Btn_KlaimSelesai" to="." method="_on_btn_klaim_selesai_pressed"]
